--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
+
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="Privacy Policy">
+  <meta property="og:description" content="This page explains how we collect, use, and protect your data.">
+  <meta property="og:image" content="https://itmus.github.io/privacy-policy/preview.png">
+  <meta property="og:url" content="https://itmus.github.io/privacy-policy/">
 </head>
 <body>
   <h1>Privacy Policy</h1>
