--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>Privacy Policy</title>
 
   <!-- Open Graph tags -->
-  <meta property="og:title" content="Privacy Policy">
+  <meta property="og:title" content="Policy-privacy">
   <meta property="og:description" content="This page explains how we collect, use, and protect your data.">
-  <meta property="og:image" content="https://itmus.github.io/privacy-policy/preview.png">
-  <meta property="og:url" content="https://itmus.github.io/privacy-policy/">
+  <meta property="og:image" content="https://itmus.github.io/Policy-privacy/preview.png">
+  <meta property="og:url" content="https://itmus.github.io/Policy-privacy/">
 </head>
 <body>
   <h1>Privacy Policy</h1>
