--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Privacy Policy</title>
 
   <!-- Open Graph tags -->
-  <meta property="og:title" content="Policy-privacy">
+  <meta property="og:title" content="Privacy Policy – Congroup App">
   <meta property="og:description" content="This page explains how we collect, use, and protect your data.">
   <meta property="og:image" content="https://itmus.github.io/Policy-privacy/preview.png">
   <meta property="og:url" content="https://itmus.github.io/Policy-privacy/">
@@ -17,7 +17,7 @@
   <h2>Data We Collect</h2>
   <ul>
     <li>Name, email address and messages sended to the messenger inbox in Congroup Congroup Page</li>
-    <liUsage data and device information</li>
+    <li>Usage data and device information</li>
   </ul>
 
   <h2>Purpose of Data Processing</h2>
