--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <meta property="og:description" content="This page explains how we collect, use, and protect your data.">
   <meta property="og:image" content="https://itmus.github.io/Policy-privacy/preview.png">
   <meta property="og:url" content="https://itmus.github.io/Policy-privacy/">
+  <meta property="og:type" content="website">
+  <meta property="fb:app_id" content="1207265524792614">
+
+
 </head>
 <body>
   <h1>Privacy Policy</h1>
